--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ code {
     monospace;
 }
 
-.container {
-  overflow-y: auto;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+#root {
+  height: 100%;
 }
